# uav-nerf-sim

./: .gitignore  NERF_ROS_PARAM.md  README.md
launch/: airsim_node.launch  simulation.rviz  single_drone_exploration.xml  start_simulation.launch  visualization.xml
settings/: foxglove_default.json  settings.json
src/RACER/swarm_exploration/active_perception/: CMakeLists.txt
src/RACER/swarm_exploration/bspline/: CMakeLists.txt
src/RACER/swarm_exploration/bspline_opt/: CMakeLists.txt
src/RACER/swarm_exploration/exploration_manager/: CMakeLists.txt
src/RACER/swarm_exploration/path_searching/: CMakeLists.txt
src/RACER/swarm_exploration/plan_env/: CMakeLists.txt
src/RACER/swarm_exploration/plan_manage/: CMakeLists.txt
src/RACER/swarm_exploration/poly_traj/: CMakeLists.txt
src/RACER/swarm_exploration/traj_utils/: CMakeLists.txt
src/RACER/swarm_exploration/utils/lkh_mtsp_solver/: CMakeLists.txt
src/RACER/swarm_exploration/utils/lkh_mtsp_solver/resource/: amtsp2_1.atsp  amtsp2_1.par  amtsp2_1.tour  amtsp2_2.atsp  amtsp2_2.par  amtsp2_2.tour  amtsp2_3.atsp  amtsp2_3.par  amtsp2_3.tour  amtsp2_4.atsp  amtsp2_4.par  amtsp2_4.tour  amtsp3_1.atsp  amtsp3_1.par  amtsp3_1.tour  amtsp3_2.atsp  amtsp3_2.par  amtsp3_2.tour  amtsp3_3.atsp  amtsp3_3.par  amtsp3_3.tour  amtsp_1.atsp  amtsp_1.par  amtsp_1.tour  amtsp_2.atsp  amtsp_2.par  amtsp_2.tour  amtsp_3.atsp  amtsp_3.par  amtsp_3.tour  amtsp_4.atsp  amtsp_4.par  amtsp_4.tour
src/RACER/swarm_exploration/utils/lkh_tsp_solver/: CMakeLists.txt
src/RACER/uav_simulator/Utils/multi_map_server/: CMakeLists.txt
src/RACER/uav_simulator/Utils/odom_visualization/src/: odom_visualization.cpp
src/RACER/uav_simulator/Utils/rviz_plugins/: CMakeLists.txt
src/RACER/uav_simulator/Utils/uav_utils/: CMakeLists.txt
src/RACER/uav_simulator/Utils/waypoint_generator/: CMakeLists.txt
src/RACER/uav_simulator/local_sensing/: CMakeLists.txt
src/RACER/uav_simulator/map_generator/: CMakeLists.txt
src/RACER/uav_simulator/poscmd_2_odom/: CMakeLists.txt
src/RACER/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt
src/odom_transform/: CMakeLists.txt  package.xml
src/odom_transform/include/: odom_transform.h
src/odom_transform/src/: odom_transform_node.cpp
src/uav_controller/: CMakeLists.txt  package.xml
src/uav_controller/scripts/: main_controller.py  uav_controller.py
src/uav_controller/src/: uav_controller_node.cpp
